--- a/INSTALL
+++ b/INSTALL
@@ -2,10 +2,10 @@
 Installation
 ############
 
-This code is open-source. See :doc:`/about/LICENSE` for details.
+This code is open-source. See :doc:`/about/license` for details.
 
-If you want to contribute to the code, you should go to :doc:`/dev`
-documentation.
+If you want to contribute to the code, you should go to
+:doc:`/contribute/index` documentation.
 
 Install the package with your favorite Python installer. As an example, with
 pip:
@@ -15,4 +15,4 @@ pip:
    # Not released yet on PyPI, so use the source...
    pip install https://github.com/benoitbryon/xal.git#egg=xal
 
-See :doc:`api/modules` for a detailed usage documentation.
+See :doc:`api/index` for a detailed usage documentation.
