--- a/README
+++ b/README
@@ -60,3 +60,4 @@ Ressources
 * Documentation: https://xal.readthedocs.org
 * Code repository: https://github.com/benoitbryon/xal
 * Bugtracker: https://github.com/benoitbryon/xal/issues
+* Continuous integration: https://travis-ci.org/benoitbryon/xal
