Updated documenation: preparing 0.1 release on PyPI.

--- a/INSTALL
+++ b/INSTALL
@@ -4,15 +4,14 @@ Installation
 
 This code is open-source. See :doc:`/about/license` for details.
 
-If you want to contribute to the code, you should go to
-:doc:`/contribute/index` documentation.
+If you want to contribute to the code and get a development environment, you
+should go to :doc:`/contribute/index` documentation.
 
 Install the package with your favorite Python installer. As an example, with
 pip:
 
-.. code-block:: sh
+.. code:: sh
 
-   # Not released yet on PyPI, so use the source...
-   pip install https://github.com/benoitbryon/xal.git#egg=xal
+   pip install xal
 
-See :doc:`api/index` for a detailed usage documentation.
+See :doc:`api/index` for auto-generated API documentation.
