--- a/README
+++ b/README
@@ -14,6 +14,14 @@ Xal is a contextual execution framework for Python.
 Xal helps you create scripts to perform actions on a system, like managing
 non-Python resources, independantly from the execution context.
 
+The main motivation of this library is about sharing system scripts:
+
+* scripts are written with session as argument, they use an high-level abstract
+  API;
+
+* sessions are registries, they encapsulate API implementation: local Python
+  shell, Fabric, Salt...
+
 
 *******
 Example
@@ -23,11 +31,7 @@ Let's create a xal-compatible function. It takes the execution context as input
 argument:
 
 >>> def home_directory_exists(session):
-...     """Return True if home directory of session's user exists.
-...
-...     ``session`` argument is the execution context.
-...
-...     """
+...     """Return True if home directory of session's user exists."""
 ...     return session.dir.exists(session.dir.home)
 
 Then create an execution session. The ``LocalSession`` used here is a
@@ -40,15 +44,6 @@ Finally run the function in the session:
 
 >>> home_directory_exists(session)
 True
-
-The main motivation of this library is about sharing system scripts:
-
-* scripts are written with session as argument, they use an high-level abstract
-  API;
-
-* sessions can be created for use in various environments: local Python shell,
-  Fabric, Salt... Sessions are registries ; they encapsulate API
-  implementation.
 
 
 **********
