Refreshed project layout. Using Tox.

--- a/INSTALL
+++ b/INSTALL
@@ -5,7 +5,7 @@ Installation
 This code is open-source. See :doc:`/about/license` for details.
 
 If you want to contribute to the code and get a development environment, you
-should go to :doc:`/contribute/index` documentation.
+should go to :doc:`/contributing` documentation.
 
 Install the package with your favorite Python installer. As an example, with
 pip:
@@ -13,5 +13,3 @@ pip:
 .. code:: sh
 
    pip install xal
-
-See :doc:`api/index` for auto-generated API documentation.
